Fix spacing in achievement section

--- a/styles/index.css
+++ b/styles/index.css
@@ -279,24 +279,31 @@ nav{
     color: white;
     font-size: 30px;
     margin-top: 15px;
+    margin-bottom: 20px;
 }
 
 .achievement__info{
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 50px;
-    width: 600px;
     margin: auto;
+    padding: 20px 30px;
     background-color: white;
     box-shadow: 10px 10px 20px 0 rgba(0, 0, 0, 0.5);
+}
+
+.achievement__info p{
+    margin-top: 10px;
+    font-weight: 600;
+}
+
+.achievement__info div{
+    padding: 20px 60px;
 }
 
 .achievement__info div:nth-child(2){
     border-right: 2px solid navy;
     border-left: 2px solid navy;
-    padding-left: 20px;
-    padding-right: 20px;
 }
 
 /* Advanced features */
